# workforce-planning-full-stack

./: .env  .gitignore  README.md
.copier/: .copier-answers.yml
backend/: pyproject.toml
backend/app/models/: optimization.py  scenario.py
backend/app/services/database/: mongodb.py
backend/app/services/message_queue/: redis.py
backend/app/services/optimization/: gurobi.py
docker/mongodb/: Dockerfile
docker/optimization_workers/: Dockerfile
docker/redis/: Dockerfile
frontend/src/components/Scenarios/: CreateScenario.tsx  EditScenario.tsx  ScenarioList.tsx
kubernetes/mongodb/: deployment.yaml
kubernetes/optimization_workers/: deployment.yaml
kubernetes/redis/: deployment.yaml
optimization_workers/: .gitignore  Dockerfile  Dockerfile.gurobi  docker-compose.yaml  pyproject.toml  worker.py
optimization_workers/app/api/: fastapi.py  main.py
optimization_workers/app/api/endpoints/: combination.py  jobs.py  resource.py  scenario.py  settings.py
optimization_workers/app/api/models/: combination.py  job.py  kpi.py  resource.py  scenario.py  settings.py  solution.py
optimization_workers/app/core/: config.py
optimization_workers/app/models/: optimization.py
optimization_workers/app/services/database/: mongodb.py
optimization_workers/app/services/message_queue/: redis.py
optimization_workers/app/services/optimization/: gurobi.py
optimization_workers/app/tasks/: celery_worker.py
